--- a/app/src/main/res/layout/recycler_video_list_item.xml
+++ b/app/src/main/res/layout/recycler_video_list_item.xml
@@ -1,15 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="115dp">
+
+    <ImageView
+        android:background="@color/colorAccent"
+        android:layout_width="60dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/iv_poster"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="100dp"/>
 
     <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="84dp"
-            tools:layout_editor_absoluteX="111dp"
-            android:id="@+id/textView"/>
+        android:text="影片名称"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_video_name"
+        android:textSize="48px"
+        android:layout_marginStart="32dp"
+        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.01"/>
+
+    <TextView
+        android:text="主演:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_actor"
+        android:layout_marginTop="16dp"
+        android:textSize="36px"
+        app:layout_constraintTop_toBottomOf="@+id/tv_video_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="32dp"
+        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"/>
+
+    <TextView
+        android:text="导演："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_director"
+        android:layout_marginTop="16dp"
+        android:textSize="36px"
+        app:layout_constraintTop_toBottomOf="@+id/tv_actor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="32dp"
+        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0"/>
+
+    <TextView
+        android:text="5.0分"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_score"
+        android:textSize="36px"
+        android:layout_marginStart="240dp"
+        app:layout_constraintLeft_toRightOf="@+id/iv_poster"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
