--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,14 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_video_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.henry.cocovideodata.detail.VideoDetailActivity">
+    tools:context=".MainActivity">
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="145dp"
+        android:id="@+id/detailPosterIv"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailVideoName"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailVideoName"
+        android:textSize="30sp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:text="演员："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
+        android:layout_marginTop="16dp"
+        android:textSize="36px"
+        app:layout_constraintTop_toBottomOf="@+id/detailVideoName"/>
+
+    <TextView
+        android:text="导演："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="36px"
+        android:id="@+id/textView3"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"/>
+
+    <TextView
+        android:text="年份："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="36px"
+        android:id="@+id/textView4"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+
+    <TextView
+        android:text="地区："
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="36px"
+        android:id="@+id/textView5"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"/>
+
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailActorTv"
+        android:ellipsize="end"
+        android:textSize="36px"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailVideoName"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:maxLines="1"/>
+
+    <TextView
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailDirectorTv"
+        android:textSize="36px"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailActorTv"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView3"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailYearTv"
+        android:textSize="36px"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailDirectorTv"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/textView4"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailAreaTv"
+        android:layout_marginStart="8dp"
+        android:textSize="36px"
+        app:layout_constraintLeft_toRightOf="@+id/textView5"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailYearTv"/>
+
+    <TextView
+        android:text="剧情简介"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView10"
+        android:textSize="48px"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailPosterIv"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <ImageView
+        android:layout_width="360dp"
+        android:layout_height="3dp"
+        android:background="@color/colorPrimary"
+        tools:layout_editor_absoluteX="8dp"
+        android:id="@+id/imageView2"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"/>
+
+    <TextView
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailSummaryTv"
+        android:layout_marginTop="16dp"
+        android:textSize="36px"
+        android:lines="5"
+        android:ellipsize="end"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/detailAverageTv"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:text="上传数据"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="8dp"
+        android:textSize="48px"
+        android:id="@+id/button2"
+        android:layout_marginTop="100dp"
+        android:onClick="onUploadData"
+        app:layout_constraintTop_toBottomOf="@+id/detailSummaryTv"/>
+
+</android.support.constraint.ConstraintLayout>
