--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -8,10 +8,10 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="90dp"
-        android:layout_height="145dp"
+        android:layout_width="80dp"
+        android:layout_height="130dp"
         android:id="@+id/detailPosterIv"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailVideoName"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/detailVideoName"
-        android:textSize="30sp"
+        android:textSize="48px"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="16dp"
@@ -33,7 +33,7 @@
         android:id="@+id/textView2"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:textSize="36px"
         app:layout_constraintTop_toBottomOf="@+id/detailVideoName"/>
 
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:textSize="36px"
         android:id="@+id/textView3"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"/>
@@ -56,7 +56,7 @@
         android:id="@+id/textView4"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
     <TextView
@@ -67,7 +67,7 @@
         android:id="@+id/textView5"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toRightOf="@+id/detailPosterIv"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 
     <TextView
@@ -76,7 +76,7 @@
         android:id="@+id/detailActorTv"
         android:ellipsize="end"
         android:textSize="36px"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailVideoName"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
@@ -87,7 +87,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/detailDirectorTv"
         android:textSize="36px"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailActorTv"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/textView3"/>
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/detailYearTv"
         android:textSize="36px"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailDirectorTv"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/textView4"/>
@@ -109,7 +109,7 @@
         android:layout_marginStart="8dp"
         android:textSize="36px"
         app:layout_constraintLeft_toRightOf="@+id/textView5"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailYearTv"/>
 
     <TextView
@@ -118,27 +118,30 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView10"
         android:textSize="48px"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/detailPosterIv"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <ImageView
-        android:layout_width="360dp"
+        android:layout_width="344dp"
         android:layout_height="3dp"
         android:background="@color/colorPrimary"
-        tools:layout_editor_absoluteX="8dp"
         android:id="@+id/imageView2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"/>
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:id="@+id/detailSummaryTv"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:textSize="36px"
-        android:lines="5"
+        android:lines="4"
         android:ellipsize="end"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
         android:layout_marginStart="16dp"
@@ -150,18 +153,33 @@
         android:id="@+id/detailAverageTv"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:text="上传数据"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteX="0dp"
         android:textSize="48px"
         android:id="@+id/button2"
-        android:layout_marginTop="100dp"
         android:onClick="onUploadData"
-        app:layout_constraintTop_toBottomOf="@+id/detailSummaryTv"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/detailRecyclerView"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="344dp"
+        android:layout_height="165dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailSummaryTv"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
