完成首页功能（UI样式未调） 排行榜列表页下啦刷新功能

--- a/app/src/main/res/layout/activity_top250_list.xml
+++ b/app/src/main/res/layout/activity_top250_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/videoListRefreshLayout"
     tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -14,4 +16,4 @@
         tools:layout_editor_absoluteX="8dp">
     </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
