--- a/app/src/main/res/layout/recycler_detail_list_item.xml
+++ b/app/src/main/res/layout/recycler_detail_list_item.xml
@@ -20,17 +20,17 @@
         android:layout_marginBottom="16dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:id="@+id/webSourceTv"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/videoIndexTv"
-        android:layout_marginStart="24dp"/>
+        android:layout_marginStart="30dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="10sp"
         android:id="@+id/m3u8SourceTv"
@@ -38,6 +38,6 @@
         app:layout_constraintTop_toBottomOf="@+id/webSourceTv"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
